melhorando o link de voltar a página principal

--- a/conclusao.html
+++ b/conclusao.html
@@ -35,7 +35,7 @@
     </main>
     <footer>
       
-        <p class="voltar"><a class="detalhes" href="mascara.html"> voltar </a></p>
+        <p class="voltar"><a class="menu-principal" href="index.html"> voltar ao menu principal</a></p>
       </footer>
 </body>
 </html>
