--- a/descricao.html
+++ b/descricao.html
@@ -22,7 +22,7 @@
     </main>
     <footer>
         <p class="pagina"><a class="detalhes" href="historia.html">Proxima página</a></p>
-        <p class="voltar"><a class="detalhes" href="index.html"> voltar ao menu principal</a></p>
+        <p class="voltar"><a class="menu-principal" href="index.html"> voltar ao menu principal</a></p>
       </footer>
 </body>
 </html>
