--- a/historia.html
+++ b/historia.html
@@ -24,6 +24,7 @@
     <footer>
       <p class="pagina"><a class="detalhes" href="personalidade.html">Proxima página</a></p>
       <p class="voltar"><a class="detalhes" href="descricao.html"> voltar </a></p>
+      <p class="voltar"><a class="menu-principal" href="index.html"> voltar ao menu principal</a></p>
     </footer>
 </body>
 </html>
