--- a/mascara.html
+++ b/mascara.html
@@ -22,6 +22,7 @@
     <footer>
         <p class="pagina"><a class="detalhes" href="conclusao.html">Proxima página</a></p>
         <p class="voltar"><a class="detalhes" href="personalidade.html"> voltar </a></p>
+        <p class="voltar"><a class="menu-principal" href="index.html"> voltar ao menu principal</a></p>
       </footer>
 </body>
 </html>
