--- a/personalidade.html
+++ b/personalidade.html
@@ -26,6 +26,7 @@
         <footer>
             <p class="pagina"><a class="detalhes" href="mascara.html">Proxima página</a></p>
             <p class="voltar"><a class="detalhes" href="historia.html"> voltar </a></p>
+            <p class="voltar"><a class="menu-principal" href="index.html"> voltar ao menu principal</a></p>
           </footer>
     
 </main>
